--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,21 @@
-body {
+/* body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-}
+} */
 
 .error-msg{
-	color:#f50;
+	color: #f50;
 	padding-left:10px;
-	padding-top:10px;
+	padding-top: 10px;
 }
 
 .am-tab-bar{
 	position: fixed;
 	bottom: 0;
 	width: 100%;
+  // height: auto;
+  height:50px !important;
 }
 .fixd-header.am-navbar{
 	position: fixed;
