--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@
 }
 #chat-page .chat-me .am-list-content{
 	padding-right: 15px;
-	text-align: right;
+	text-align: right !important;
 }
 #chat-page .am-grid-icon{
 	display: none;
